--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jobcontent.ai",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://saksham-2001.github.io/jobcontent.ai",
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-icons": "^1.3.2",
@@ -30,6 +31,8 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -52,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
